[package]
name = "hpms"
version = "0.1.0"
authors = ["Luca Visentin <luca.visentin@unito.it>"]
edition = "2021"
description = "A tiny project management system."
readme = "README.md"
repository = "https://github.com/MrHedmad/hpdms"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
log = "0.4"
simple_logger = "4.0.0"